--- a/index.html
+++ b/index.html
@@ -80,9 +80,13 @@
 			<a
 				class="footer-link"
 				href="https://www.linkedin.com/in/davide-mazzone-30b545174"
+				target="_blank"
 				>LinkedIn</a
 			>
-			<a class="footer-link" href="https://github.com/DavideFolk"
+			<a
+				class="footer-link"
+				href="https://github.com/DavideFolk"
+				target="_blank"
 				>GitHub</a
 			>
 			<p class="copyright">© 2022 Davide Mazzone.</p>
