--- a/index.html
+++ b/index.html
@@ -31,23 +31,21 @@
 				/>
 				<h2>Ciao.</h2>
 				<p class="intro">
-					Mi occupo di sviluppo web, frontend e backend. Lorem ipsum
-					dolor sit, amet consectetur adipisicing elit. Quibusdam,
-					ullam. Atque officia libero a at harum sit praesentium, quia
-					iure quasi vitae repudiandae laborum quidem? Ad voluptatem
-					sed eos eius.
+					Mi occupo di sviluppo web, front-end e back-end. Lavoro come
+					sviluppatore per una società di consulenza e mi piace
+					sperimentare con progetti web e tecnologie sempre diverse.
 				</p>
 			</div>
 			<hr />
 			<div class="skills">
-				<h2>My Skills.</h2>
+				<h2>Le mie skill.</h2>
 				<div class="skill-row">
 					<img class="coding-img" src="images/coding.png" alt="" />
-					<h3>Lorem & Ipsum</h3>
+					<h3>Sviluppo web</h3>
 					<p>
-						Lorem ipsum dolor sit amet, quis in duis, iaculis id
-						felis. Consectetuer vestibulum, nunc urna lectus, erat
-						ligula. Hendrerit nam, lectus ante, ut lorem eros.
+						Sviluppo da semplici pagine web con HTML, CCS e
+						Bootstrap, fino a progetti più complicati, integrando
+						Javascript, node.js, SQL e altre tecnologie back-end.
 					</p>
 				</div>
 				<div class="skill-row">
@@ -56,23 +54,24 @@
 						src="images/computer.png"
 						alt=""
 					/>
-					<h3>Lorem Ipsum Dolor</h3>
+					<h3>Tecnico hardware e software</h3>
 					<p>
-						Lorem ipsum dolor sit amet, mauris sed consectetuer.
-						Etiam et eu, bibendum interdum, lacus quis mauris.
-						Curabitur wisi, quisque vel eu, rutrum nam.
+						Mi occupo anche di assemblaggio, sostituzione e
+						manutenzione hardware, installazione sistemi operativi e
+						assistenza per problematiche hardware e software.
 					</p>
 				</div>
 			</div>
 			<hr />
 			<div class="contact-me">
-				<h2>Get In Touch</h2>
-				<h3>Lorem ipsum dolor sit amet, non elit.</h3>
+				<h2>Restiamo in contatto.</h2>
+				<h3>Per qualche informazione in più.</h3>
 				<p class="contact-message">
-					Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus
-					sodales, tellus donec dui, ornare erat.
+					Se hai un progetto che vuoi iniziare, pensi di aver bisogno
+					del mio aiuto con qualcosa o semplicemente hai voglia di
+					dire hey, mandami pure una email.
 				</p>
-				<a class="btn" href="mailto:mazzone.da@gmail.com">CONTACT ME</a>
+				<a class="btn" href="mailto:mazzone.da@gmail.com">CONTATTAMI</a>
 			</div>
 		</div>
 
